# lupa-redbpf

./: .gitignore  Cargo.toml  build.rs
probes/: Cargo.toml
probes/src/: lib.rs
probes/src/filetracker/: main.rs  mod.rs
src/: api.rs  file_probes.rs  lupa.rs  main.rs  probe.rs  probe_serde.rs  process.rs  tracer.rs  web_frontend.rs  wrapper.rs
web/: Cargo.toml
web/src/: main.rs
