[package]
name = "lupa"
version = "0.1.0"
authors = ["Gustavo Noronha Silva <gustavo@noronha.dev.br>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "lupa-probe"
path = "src/probe.rs"

[dependencies]
probes = { path = "./probes" }

redbpf = { git = "https://github.com/foniod/redbpf.git", features = ["load"] }

tracing-subscriber = "0.3"
tracing = "0.1"

anyhow = "1.0.69"

tokio = { version = "1.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4.1"
serde_json = "1.0.87"

nix = { version = "0.25", features = ["user"] }
structopt = "0.3.26"

tui = "0.19.0"
crossterm = "0.26.0"
backtrace = "0.3.67"

[build-dependencies]
cargo-bpf = { git = "https://github.com/foniod/redbpf.git", default-features = false, features = ["llvm13", "build"] }
