[package]
name = "probes"
version = "0.1.0"
edition = '2018'

[dependencies]
cty = "0.2"
redbpf-macros = { git = "https://github.com/kov/redbpf.git", branch = "update-bindgen-version" }
redbpf-probes = { git = "https://github.com/kov/redbpf.git", branch = "update-bindgen-version" }

[build-dependencies]
cargo-bpf = { git = "https://github.com/kov/redbpf.git", branch = "update-bindgen-version", default-features = false, features = ["llvm13"]}

[features]
default = []
probes = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "filetracker"
path = "src/filetracker/main.rs"
required-features = ["probes"]
